july 27 trading + gave up on bez curve

--- a/stable_diffusion_premade_keras.ipynb
+++ b/stable_diffusion_premade_keras.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = model.text_to_image(\"astronaut riding a horse on mars\", batch_size=3)\n",
+    "images = model.text_to_image(\"dumb asian man short, with boobs\", batch_size=3)\n",
     "plot_images(images)"
    ]
   }
