profit not displacement

--- a/test6.ipynb
+++ b/test6.ipynb
@@ -9,14 +9,16 @@
     "import yfinance as yf\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import tensorflow as tf\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import LSTM, Dense, Dropout, TimeDistributed\n",
+    "from tensorflow.keras.models import Sequential, Model\n",
+    "from tensorflow.keras.layers import LSTM, Dense, Dropout, TimeDistributed, Input\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime, timedelta\n",
     "import pandas_ta as ta\n",
-    "from tensorflow.keras.losses import Huber\n",
+    "from tensorflow.keras.losses import Huber, BinaryCrossentropy\n",
     "from scipy import stats\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "\n",
     "# List of ticker symbols (example of 50 different stocks)\n",
     "tickers = [\n",
@@ -56,6 +58,7 @@
     "        combined_data[ticker] = stock_data\n",
     "        successful_tickers.append(ticker)\n",
     "\n",
+    "\n",
     "# Ensure all dataframes have the same length by trimming to the shortest one\n",
     "min_length = min([len(data) for data in combined_data.values()])\n",
     "for ticker in successful_tickers:\n",
@@ -76,17 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2741, 50, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Function to create sequences for predicting differences\n",
     "def create_sequences(data, seq_length, pred_length):\n",
@@ -104,7 +99,8 @@
     "\n",
     "# Create sequences\n",
     "X, y, dir = create_sequences(scaled_data, SEQ_LENGTH, PRED_LENGTH)\n",
-    "\n",
+    "# X = np.einsum('ijkl->ikjl', X)\n",
+    "# y = np.einsum('ijk->ikj', y)\n",
     "print(y.shape)\n",
     "# y = y.reshape((y.shape[0], y.shape[1], PRED_LENGTH))\n",
     "\n",
@@ -118,57 +114,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_layer = Input(shape=(len(tickers), SEQ_LENGTH, num_features))\n",
+    "\n",
+    "\n",
+    "reshaped_input = tf.keras.layers.Reshape((len(tickers) * SEQ_LENGTH, num_features))(input_layer)\n",
+    "\n",
+    "\n",
+    "x = LSTM(100, return_sequences=True)(reshaped_input)\n",
+    "x = LSTM(50)(x)\n",
+    "x = Dropout(0.2)(x)\n",
+    "\n",
+    "\n",
+    "x = Dense(len(tickers) * PRED_LENGTH)(x)\n",
+    "\n",
+    "\n",
+    "dir_layer = tf.keras.layers.Reshape((len(tickers), PRED_LENGTH))(x)\n",
+    "pred_layer = tf.keras.layers.Reshape((len(tickers), PRED_LENGTH))(x)\n",
+    "\n",
+    "\n",
+    "model = Model(inputs=input_layer, outputs=pred_layer)\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer=Adam(), loss='binary_crossentropy')\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/seanyao/cs/ML Keras/.venv/lib/python3.11/site-packages/keras/src/layers/core/wrapper.py:27: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(**kwargs)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      "\u001b[1m11/69\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m8:37\u001b[0m 9s/step - loss: 0.4966"
+      "\u001b[1m17/17\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 3s/step\n"
      ]
     }
    ],
    "source": [
-    "model = Sequential()\n",
-    "model.add(TimeDistributed(LSTM(100, return_sequences=True), input_shape=(SEQ_LENGTH, len(tickers), num_features)))\n",
-    "model.add(TimeDistributed(LSTM(50)))\n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(TimeDistributed(Dense(PRED_LENGTH)))\n",
-    "\n",
-    "model.compile(optimizer='adam', loss=Huber())\n",
-    "\n",
-    "# Train the model\n",
-    "model.fit(X_train, dir_train, epochs=20, batch_size=32, validation_data=(X_test, y_test))"
+    "predictions = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "percent success: 0.49932457786116324\n",
+      "attempts: 26650\n",
+      "Z-score: -0.2205\n",
+      "p-value: 0.8255\n",
+      "profit: 315.8272\n",
+      "-15.499095916748258\n",
+      "24.784393310546903\n",
+      "-26.684997558593782\n"
+     ]
+    }
+   ],
    "source": [
-    "# Make predictions\n",
-    "predictions = model.predict(X_test)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(X.shape)"
+    "success=0\n",
+    "attempts=0\n",
+    "trades = np.array([])\n",
+    "profit_over_time = np.array([])\n",
+    "for i in range(predictions.shape[0]):\n",
+    "    for j in range(50):\n",
+    "        for k in range(1):\n",
+    "            if(np.sign(predictions[i][j][k]) == np.sign(y_test[i][j][k])):\n",
+    "                success+=1\n",
+    "            trades = np.append(trades, y_test[i][j][k]*(scaler.data_max_[3] - scaler.data_min_[3]) * np.sign(predictions[i][j][k])) # long/short\n",
+    "            profit_over_time = np.append(profit_over_time, np.sum(trades))\n",
+    "            attempts+=1\n",
+    "\n",
+    "per_success = success/attempts\n",
+    "print(\"percent success: \" + str(per_success))\n",
+    "print(\"attempts: \" + str(attempts))\n",
+    "\n",
+    "\n",
+    "baseline_accuracy = 0.5\n",
+    "\n",
+    "\n",
+    "SE = np.sqrt((baseline_accuracy * (1 - baseline_accuracy)) / attempts)\n",
+    "\n",
+    "Z = (per_success - baseline_accuracy) / SE\n",
+    "\n",
+    "p_value = 2 * (1 - stats.norm.cdf(np.abs(Z)))\n",
+    "\n",
+    "print(f'Z-score: {Z:.4f}')\n",
+    "print(f'p-value: {p_value:.4f}')\n",
+    "\n",
+    "print(f'profit: {np.sum(trades):.4f}')\n",
+    "print(np.min(profit_over_time))\n",
+    "a = np.arange(len(profit_over_time))\n",
+    "print(np.max(trades))\n",
+    "print(np.min(trades))\n"
    ]
   }
  ],
